[package]
name = "oxdz"
version = "0.1.0"
authors = ["Claudio Matsuoka <cmatsuoka@gmail.com>"]
exclude = ["*.png", "doc/reference", "doc/formats"]
publish = false

[[bin]]
name = "oxdz"
path = "src/bin/oxdz.rs"
doc = false

[dependencies]
byteorder = "1.2"
getopts = "0.2"
memmap = "0.6"
riff-wave = "0.1"

[profile.release]
lto = true
