[package]
name = "oxdz"
version = "0.1.0"
authors = ["Claudio Matsuoka <cmatsuoka@gmail.com>"]
description = "A multi-format module player library written in Rust."
repository = "https://github.com/cmatsuoka/oxdz"
license = "MIT OR Apache-2.0"
exclude = ["*.png", "doc/reference", "doc/formats"]
publish = false

[dependencies]
byteorder = "1.2"
getopts = "0.2"
lazy_static = "1.0"
md5 = "0.3"
save-restore-derive = { path = "save-restore-derive" }

[profile.release]
lto = true
